2001-11-20  Laurent Julliard <laurent@julliard-online.org>

	* Source/NSComboBoxCell.m (-setNumberOfVisibleItems): max number of items tested on wrong variable. Corrected

2001-11-19  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/gui/NSGraphicsContext.h: Add usedFonts ivar.
	New methods for caching used fonts.
	* Source/NSGraphicsContect.m (-useFont): Moved from NSFont.
	(-resetUsedFonts, -usedFonts): Likewise.
	* Source/NSFont.m (+useFont:): Use them.
	* Source/NSView.m (-endDocument): Likewise.
	
	* Model/GMArchiver.m (-decodeSelectorWithName:): Use correct 0 value.

2001-11-18  Gregory John Casamento <greg_casamento@yahoo.com>

	* Tools/gopen.m: added a tool which works like the OPENSTEP 4.2/Mach 
	"open" command to the tools directory.
	
2001-11-15  Laurent Julliard <laurent@julliard-online.org>
	
	* Source/NSBrowser.m: NSBrowser encoder and decoder added

2001-11-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSFontManager.m
	Reorganised the handling of the font enumerator. New
	[_includeFont:] is only called from here. Corrected
	[availableMembersOfFontFamily:] and [fontNamed:hasTraits:].
	* Headers/gnustep/gui/GSFontInfo.h: 
	Adopted GSFontEnumerator to changes on NSFontManager.
	* Source/GSFontInfo.m: 
	Changed GSFontEnumerator so that only [enumerateFontsAndFamilies]
	must be subclassed.
	
2001-11-11  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTabView.m
	In [selectTabViewItem:] corrected setting the first responder of
	the tab view. 
	
2001-11-09  Adam Fedor  <fedor@gnu.org>

	* Source/NSView.m (-addSubview:): Raise exception on adding nil
	subview or superview of view.
	(-addSubview:positioned:relativeTo:): Likewise.
	(-beginDocument): Change NSLog to exception.

Thu Nov  8 23:30:47 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSMatrix.m ([-sizeToFit]): Reverted last change.
	* Source/NSBrowser.m ([-_performLoadOfColumn:]): Do not call
	sizeToFit on the matrix, just set the cellSize to the result of